# remote-terminal-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.it.md  CONTRIBUTING.md  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ai-changelog.yml  ai-review.yml  ci.yml
badges/: coverage-badge.json  test-badge.json
doc_progetto/: telegram_terminal_bot_specs.md
docs/: ARCHITECTURE.md  how-to-install.md  manuale-installazione.md
scripts/: install.sh
src/: __main__.py  audit_log.py  bot.py  config.py  handlers.py  shell_session.py  state_manager.py  utils.py
systemd/: telegram-terminal-bot@.service
tests/: conftest.py  test_audit_log.py  test_bot.py  test_config.py  test_handlers.py  test_shell_session.py  test_state_manager.py  test_utils.py
