[project]
name = "telegram-terminal-bot"
version = "1.0.0"
description = "Control remote terminal sessions via Telegram bot"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "bonn" }]
keywords = ["telegram", "terminal", "remote", "shell", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "python-telegram-bot>=20.7,<21.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bonn/telegram-terminal-bot"
Repository = "https://github.com/bonn/telegram-terminal-bot"
Changelog = "https://github.com/bonn/telegram-terminal-bot/blob/main/CHANGELOG.md"
Issues = "https://github.com/bonn/telegram-terminal-bot/issues"

[project.scripts]
telegram-terminal-bot = "src.bot:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S110", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
